--- a/app/src/main/res/layout/activity_product_list_penawaran_terbaik.xml
+++ b/app/src/main/res/layout/activity_product_list_penawaran_terbaik.xml
@@ -4,9 +4,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/cl_container_all_penawaran_terbaik"
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/al_productlist_penawaran_terbaik"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
