--- a/app/src/main/res/layout/fragment_detailofficial_nama_product.xml
+++ b/app/src/main/res/layout/fragment_detailofficial_nama_product.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/cl_container_detail_official_store_nama_product"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.recyclerview.widget.RecyclerView
