--- a/app/src/main/res/layout/fragment_official_store.xml
+++ b/app/src/main/res/layout/fragment_official_store.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/cl_container_official_store"
     tools:context=".presentation.homepage.components.fragment.officialstore.FragmentOfficialStore">
 
     <TextView
+        android:id="@+id/tv_official_store"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
@@ -20,7 +22,7 @@
 
 
     <TextView
-        android:id="@+id/tv_lihat_semua_official"
+        android:id="@+id/tv_lihat_semua_official_beranda"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
@@ -34,14 +36,14 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_offical_store"
+        android:id="@+id/rv_offical_store_beranda"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_lihat_semua_official"
+        app:layout_constraintTop_toBottomOf="@id/tv_lihat_semua_official_beranda"
         tools:listitem="@layout/item_official_store" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
